--- a/main.html
+++ b/main.html
@@ -342,6 +342,31 @@
         .certification-item.flipped, .project-item.flipped {
             transform: rotateY(180deg);
         }
+        .subtitle {
+            font-size: 1.2em;
+            color: #666;
+        }
+        .cta-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .cta-button:hover {
+            background-color: #45a049;
+        }
+        a-scene { 
+            position: fixed; 
+            top: 0; 
+            left: 0; 
+            width: 100%; 
+            height: 100%; 
+            z-index: -1; 
+        }
 
     </style>
 </head>
